# MI_PROTECT_VMP

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  README.md  STATUS.md
arch/common/: CMakeLists.txt  README.md
arch/common/src/: label_resolver.cpp  lifting.cpp
arch/x64/: CMakeLists.txt  README.md
arch/x64/src/: x64.cpp
backends/rewriter/: CMakeLists.txt  README.md
backends/rewriter/src/: rewriter_backend.cpp
loader/android/: CMakeLists.txt  README.md  build.gradle.kts
loader/android/src/: android_loader.cpp
loader/ios/: CMakeLists.txt  Package.swift  README.md
loader/ios/src/: ios_loader.cpp
loader/linux/: CMakeLists.txt  README.md
loader/linux/src/: linux_loader.cpp
loader/windows/: CMakeLists.txt  README.md
loader/windows/src/: windows_loader.cpp
runtime/: CMakeLists.txt  README.md
runtime/audit/: CMakeLists.txt  README.md
runtime/audit/rust_audit/: Cargo.toml
runtime/audit/src/: audit.cpp  reaction.cpp
runtime/cryptor/src/: rolling_opcode.cpp
runtime/env_detectors/src/: detectors.cpp
runtime/env_integrity/src/: monitor.cpp
runtime/integrity/: CMakeLists.txt  README.md
runtime/integrity/rust_integrity/: Cargo.toml
runtime/integrity/src/: integrity.cpp
runtime/jit/: CMakeLists.txt  README.md
runtime/jit/rust_jit/: Cargo.toml
runtime/jit/src/: jit.cpp  vm2_jit.cpp
runtime/state/: CMakeLists.txt  README.md
runtime/strings/: CMakeLists.txt  README.md
runtime/vm1/: CMakeLists.txt  README.md
runtime/vm2/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  README.md  dummy_test.py
tests/arch/: arm64_lift_basic.cpp  arm_lift_basic.cpp  label_resolver_basic.cpp  label_resolver_duplicate.cpp  label_resolver_out_of_range.cpp  label_resolver_unresolved.cpp  lift_basic_hash_regression.cpp  lift_relocation_carrying.cpp  lift_unsupported_diagnostic.cpp  lifter_determinism.cpp  lifter_end_to_end_arm.cpp  lifter_end_to_end_arm64.cpp  lifter_end_to_end_x64.cpp  lifter_end_to_end_x86.cpp  rewriter_lift_integration_elf.py  rewriter_lift_integration_elf_with_loop.py  test_common.h  x64_lift_basic_msvc.cpp  x64_lift_basic_sysv.cpp  x86_lift_basic.cpp
tests/backends_rewriter/: rewriter_apk_passthrough.py  rewriter_elf_roundtrip.py  rewriter_ipa_passthrough.py  rewriter_macho_roundtrip.py  rewriter_pe_roundtrip.py  rewriter_pe_security_fix.py  rewriter_policy_mismatch.py  rewriter_unknown_format_rejected.py
tests/final_matrix/: functional_consistency.py
tests/integration_targets/: android_tls_align_fix.py  api_ms_win_core_synch_stub.c  bcryptprimitives_stub.c  generate_decomp_report.py  run_integration_ci.py  target_c.c  target_cpp.cpp
tests/policy/: assert_bad_policy.py  compare_cpp_rust.py  policy_cpp_summary.cpp  policy_cpp_test.cpp
tests/runtime_bogus_flow/: CMakeLists.txt  handler_objdump_growth.py  handler_probe.cpp  test_common.h  vm1_rewriter.cpp  vm1_runtime.cpp  vm2_rewriter.cpp  vm2_runtime.cpp
tests/runtime_crypto_revision/: crypto_revision_constant_time_hmac.cpp  crypto_revision_hkdf_namespaces.cpp  crypto_revision_token_bundle_compat.cpp  crypto_revision_trampoline_x64_128bit.cpp  test_common.h
tests/runtime_dispatcher_hardening/: dispatcher_ephemeral_hmac_derivation.cpp  dispatcher_self_hash_detects_tamper.cpp  dispatcher_target_prologue_and_replay.cpp  test_common.h
tests/runtime_env_detectors/: env_detectors_emulator_k_of_n.cpp  env_detectors_frida_divergence.cpp  env_detectors_hardware_breakpoint_cross_check.cpp  env_detectors_lockstep_dispatcher_drift.cpp  test_common.h
tests/runtime_env_integrity/: env_exception_baseline_detects_new_handler.cpp  env_exception_whitelist_ignores_untracked_signal.cpp  env_got_baseline_detects_tamper.cpp  env_vm_sensitive_domain_entry_checks_monitor.cpp  test_common.h
tests/runtime_metadata_encrypt/: metadata_encrypt_pe.py
tests/runtime_opcode_cryptor/: common.py  cryptor_different_seed_different_bytes.cpp  cryptor_env_seed_reproducible.py  cryptor_flag_off_identity.py  cryptor_permutation_is_bijection.cpp  cryptor_same_seed_deterministic.cpp  cryptor_semantic_equivalence_fib20.py  cryptor_tampered_seed_detected.py  cryptor_vm2_equivalent.py  integration_with_crc32.py  test_common.h
tests/runtime_reverse_layout/: common.py  reverse_layout_branches_forward_pc.cpp  reverse_layout_crc32_valid.py  reverse_layout_fib20_equivalent.cpp  reverse_layout_length_table_derivable.cpp  reverse_layout_vm2_equivalent.cpp  reverse_layout_with_cryptor.py  test_common.h  vmp_vm1_layout_cli.py  vmp_vm2_layout_cli.py
tests/runtime_rolling_opcode/: rolling_opcode_dispatch_budget_hot_path.cpp  rolling_opcode_domain_switch_rotates_both_domains.cpp  rolling_opcode_previous_epoch_inflight_fetch.cpp  rolling_opcode_store_current_previous.cpp  rolling_opcode_vm1_event_rotation.cpp  rolling_opcode_vm1_jit_evicts_on_epoch_bump.cpp  rolling_opcode_vm2_jit_epoch_tag_evict.cpp  test_common.h
tests/runtime_stack_probe/: stack_probe_integration_sites.cpp  stack_probe_libunwind_fallback_deleted_mapping.cpp  stack_probe_trigger_gate_and_anon_exec_event.cpp  test_common.h
tests/runtime_state_machine/: degraded_raises_plaintext_budget.cpp  hw_breakpoint_goes_to_terminating.cpp  integrity_register_and_verify_ok.cpp  integrity_tamper_detected.cpp  jit_cache_integrity_failure_vm1.cpp  state_machine_transition_table.cpp  terminating_invalidates_jit_and_wipes_keys.cpp  test_common.h  vmp_state_probe_cli.py
tests/runtime_trampoline/: stack_function_table_audits_and_hmac.cpp  token_manager_hkdf_derive.cpp  trampoline_bundle_roundtrip.cpp  trampoline_bytes_all_arch.cpp  vmp_trampoline_inject_cli.py
tests/runtime_trusted_oracle/: test_common.h  trusted_oracle_cross_source_voting.cpp  trusted_oracle_direct_syscall_proc_status.cpp  trusted_oracle_prologue_baseline_detects_tamper.cpp  trusted_oracle_thread_liveness.cpp
tools/: CMakeLists.txt  README.md
tools/src/: vmp_clangxx.cpp  vmp_integrity_probe.cpp  vmp_loader_selftest.cpp  vmp_protect.cpp  vmp_state_probe.cpp  vmp_trampoline_inject.cpp  vmp_vm1_asm.cpp  vmp_vm1_layout.cpp  vmp_vm1_run.cpp  vmp_vm2_asm.cpp  vmp_vm2_layout.cpp  vmp_vm2_run.cpp
(+142 files in other folders)
