add_subdirectory(cryptor)
add_subdirectory(vm1)
if(VMP_WITH_VM2)
  add_subdirectory(vm2)
endif()
if(VMP_WITH_JIT)
  add_subdirectory(jit)
endif()
add_subdirectory(audit)
add_subdirectory(strings)
add_subdirectory(trusted_oracle)
add_subdirectory(stack_probe)
add_subdirectory(env_integrity)
add_subdirectory(env_detectors)
add_subdirectory(trampoline)
add_subdirectory(integrity)
add_subdirectory(state)
